antlr/generated_java/quickanddirtycParser.java
// Generated from quickanddirtyc.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class quickanddirtycParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, Break=6, Case=7, Char=8, Const=9, 
		Continue=10, Default=11, Double=12, Else=13, Extern=14, Float=15, For=16, 
		If=17, Int=18, Long=19, Return=20, Short=21, Signed=22, Sizeof=23, Static=24, 
		Switch=25, Typedef=26, Unsigned=27, Void=28, While=29, LeftParen=30, RightParen=31, 
		LeftBracket=32, RightBracket=33, LeftBrace=34, RightBrace=35, Less=36, 
		LessEqual=37, Greater=38, GreaterEqual=39, LeftShift=40, RightShift=41, 
		Plus=42, PlusPlus=43, Minus=44, MinusMinus=45, Star=46, Div=47, Mod=48, 
		And=49, Or=50, AndAnd=51, OrOr=52, Caret=53, Not=54, Tilde=55, Question=56, 
		Colon=57, Semi=58, Comma=59, Assign=60, StarAssign=61, DivAssign=62, ModAssign=63, 
		PlusAssign=64, MinusAssign=65, LeftShiftAssign=66, RightShiftAssign=67, 
		AndAssign=68, XorAssign=69, OrAssign=70, Equal=71, NotEqual=72, Arrow=73, 
		Dot=74, Ellipsis=75, Identifier=76, Constant=77, DigitSequence=78, StringLiteral=79, 
		Whitespace=80, Newline=81, BlockComment=82, LineComment=83;
	public static final int
		RULE_primaryExpression = 0, RULE_postfixExpression = 1, RULE_argumentExpressionList = 2, 
		RULE_unaryExpression = 3, RULE_unaryOperator = 4, RULE_castExpression = 5, 
		RULE_multiplicativeExpression = 6, RULE_additiveExpression = 7, RULE_shiftExpression = 8, 
		RULE_relationalExpression = 9, RULE_equalityExpression = 10, RULE_andExpression = 11, 
		RULE_exclusiveOrExpression = 12, RULE_inclusiveOrExpression = 13, RULE_logicalAndExpression = 14, 
		RULE_logicalOrExpression = 15, RULE_conditionalExpression = 16, RULE_assignmentExpression = 17, 
		RULE_assignmentOperator = 18, RULE_expression = 19, RULE_constantExpression = 20, 
		RULE_declaration = 21, RULE_declarationSpecifiers = 22, RULE_declarationSpecifiers2 = 23, 
		RULE_declarationSpecifier = 24, RULE_initDeclaratorList = 25, RULE_initDeclarator = 26, 
		RULE_storageClassSpecifier = 27, RULE_typeSpecifier = 28, RULE_specifierQualifierList = 29, 
		RULE_typeQualifier = 30, RULE_declarator = 31, RULE_directDeclarator = 32, 
		RULE_nestedParenthesesBlock = 33, RULE_pointer = 34, RULE_typeQualifierList = 35, 
		RULE_parameterTypeList = 36, RULE_parameterList = 37, RULE_parameterDeclaration = 38, 
		RULE_identifierList = 39, RULE_typeName = 40, RULE_abstractDeclarator = 41, 
		RULE_directAbstractDeclarator = 42, RULE_initializer = 43, RULE_initializerList = 44, 
		RULE_designation = 45, RULE_designatorList = 46, RULE_designator = 47, 
		RULE_statement = 48, RULE_labeledStatement = 49, RULE_compoundStatement = 50, 
		RULE_blockItemList = 51, RULE_blockItem = 52, RULE_expressionStatement = 53, 
		RULE_selectionStatement = 54, RULE_iterationStatement = 55, RULE_forCondition = 56, 
		RULE_forDeclaration = 57, RULE_forExpression = 58, RULE_jumpStatement = 59, 
		RULE_compilationUnit = 60, RULE_translationUnit = 61, RULE_externalDeclaration = 62, 
		RULE_functionDefinition = 63, RULE_declarationList = 64;
	public static final String[] ruleNames = {
		"primaryExpression", "postfixExpression", "argumentExpressionList", "unaryExpression", 
		"unaryOperator", "castExpression", "multiplicativeExpression", "additiveExpression", 
		"shiftExpression", "relationalExpression", "equalityExpression", "andExpression", 
		"exclusiveOrExpression", "inclusiveOrExpression", "logicalAndExpression", 
		"logicalOrExpression", "conditionalExpression", "assignmentExpression", 
		"assignmentOperator", "expression", "constantExpression", "declaration", 
		"declarationSpecifiers", "declarationSpecifiers2", "declarationSpecifier", 
		"initDeclaratorList", "initDeclarator", "storageClassSpecifier", "typeSpecifier", 
		"specifierQualifierList", "typeQualifier", "declarator", "directDeclarator", 
		"nestedParenthesesBlock", "pointer", "typeQualifierList", "parameterTypeList", 
		"parameterList", "parameterDeclaration", "identifierList", "typeName", 
		"abstractDeclarator", "directAbstractDeclarator", "initializer", "initializerList", 
		"designation", "designatorList", "designator", "statement", "labeledStatement", 
		"compoundStatement", "blockItemList", "blockItem", "expressionStatement", 
		"selectionStatement", "iterationStatement", "forCondition", "forDeclaration", 
		"forExpression", "jumpStatement", "compilationUnit", "translationUnit", 
		"externalDeclaration", "functionDefinition", "declarationList"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'__extension__'", "'_Alignof'", "'auto'", "'register'", "'goto'", 
		"'break'", "'case'", "'char'", "'const'", "'continue'", "'default'", "'double'", 
		"'else'", "'extern'", "'float'", "'for'", "'if'", "'int'", "'long'", "'return'", 
		"'short'", "'signed'", "'sizeof'", "'static'", "'switch'", "'typedef'", 
		"'unsigned'", "'void'", "'while'", "'('", "')'", "'['", "']'", "'{'", 
		"'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", 
		"'--'", "'*'", "'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", 
		"'~'", "'?'", "':'", "';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", 
		"'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", "'->'", 
		"'.'", "'...'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "Break", "Case", "Char", "Const", 
		"Continue", "Default", "Double", "Else", "Extern", "Float", "For", "If", 
		"Int", "Long", "Return", "Short", "Signed", "Sizeof", "Static", "Switch", 
		"Typedef", "Unsigned", "Void", "While", "LeftParen", "RightParen", "LeftBracket", 
		"RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", 
		"GreaterEqual", "LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", 
		"MinusMinus", "Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", 
		"Not", "Tilde", "Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", 
		"DivAssign", "ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", 
		"RightShiftAssign", "AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", 
		"Arrow", "Dot", "Ellipsis", "Identifier", "Constant", "DigitSequence", 
		"StringLiteral", "Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "quickanddirtyc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public quickanddirtycParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PrimaryExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(quickanddirtycParser.Identifier, 0); }
		public TerminalNode Constant() { return getToken(quickanddirtycParser.Constant, 0); }
		public List<TerminalNode> StringLiteral() { return getTokens(quickanddirtycParser.StringLiteral); }
		public TerminalNode StringLiteral(int i) {
			return getToken(quickanddirtycParser.StringLiteral, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quickanddirtycListener ) ((quickanddirtycListener)listener).enterPrimaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quickanddirtycListener ) ((quickanddirtycListener)listener).exitPrimaryExpression(this);
		}
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primaryExpression);
		try {
			int _alt;
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(Identifier);
				}
				break;
			case Constant:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(Constant);
				}
				break;
			case StringLiteral:
				enterOuterAlt(_localctx, 3);
				{
				setState(133); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(132);
						match(StringLiteral);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(135); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case LeftParen:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				match(LeftParen);
				setState(138);
				expression(0);
				setState(139);
				match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostfixExpressionContext extends ParserRuleContext {
		public PrimaryExpressionContext primaryExpression() {
			return getRuleContext(PrimaryExpressionContext.class,0);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public InitializerListContext initializerList() {
			return getRuleContext(InitializerListContext.class,0);
		}
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArgumentExpressionListContext argumentExpressionList() {
			return getRuleContext(ArgumentExpressionListContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(quickanddirtycParser.Identifier, 0); }
		public PostfixExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfixExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof quickanddirtycListener ) ((quickanddirtycListener)listener).enterPostfixExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof quickanddirtycListener ) ((quickanddirtycListener)listener).exitPostfixExpression(this);
		}
	}

	public final PostfixExpressionContext postfixExpression() throws RecognitionException {
		return postfixExpression(0);
	}

	private PostfixExpressionContext postfixExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PostfixExpressionContext _localctx = new PostfixExpressionContext(_ctx, _parentState);
		PostfixExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_postfixExpression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(144);
				primaryExpression();
				}
				break;
			case 2:
				{
				setState(145);
				match(LeftParen);
				setState(146);
				typeName();
				setState(147);
				match(RightParen);
				setState(148);
				match(LeftBrace);
				setState(149);
				initializerList(0);
				setState(150);
				match(RightBrace);
				}
				break;
			case 3:
				{
				setState(152);
				match(LeftParen);
				setState(153);
				typeName();
				setState(154);
				match(RightParen);
				setState(155);
				match(LeftBrace);
				setState(156);
				initializerList(0);
				setState(157);
				match(Comma);
				setState(158);
				match(RightBrace);
				}
				break;
			case 4:
				{
				setState(160);
				match(T__0);
				setState(161);
				match(LeftParen);
				setState(162);
				typeName();
				setState(163);
				match(RightParen);
				setState(164);
				match(LeftBrace);
				setState(165);
				initializerList(0);
				setState(166);
				match(RightBrace);
				}
				break;
			case 5:
				{
				setState(168);
				match(T__0);
				setState(169);
				match(LeftParen);
				setState(170);
				typeName();
				setState(171);
				match(RightParen);
				setState(172);
				match(LeftBrace);
				setState(173);
				initializerList(0);
				setState(174);
				match(Comma);
				setState(175);
				match(RightBrace);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(202);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(200);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new PostfixExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(179);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(180);
						match(LeftBracket);
						setState(181);
						expression(0);
						setState(182);
						match(RightBracket);
						}
						break;
					case 2:
						{
						_localctx = new PostfixExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(184);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(185);
						match(LeftParen);
						setState(187);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << Sizeof) | (1L << LeftParen) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Star) | (1L << And) | (1L << AndAnd) | (1L << Not) | (1L << Tilde))) != 0) || ((((_la - 76)) & ~0x3f) == 0 && ((1L << (_la - 76)) & ((1L << (Identifier - 76)) | (1L << (Constant - 76)) | (1L << (DigitSequence - 76)) | (1L << (StringLiteral - 76)))) != 0)) {
							{
							setState(186);
							argumentExpressionList(0);
							}
						}
